# task_manager_api

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
api/config/: asgi.py  settings.py  urls.py  wsgi.py
api/generics/: exception.py  model.py  serializer.py  views.py
api/resources/: apps.py  models.py  serializers.py  validators.py  views.py
api/resources/migrations/: 0001_initial.py
api/resources/user/: apps.py  urls.py
api/resources/users/: admin.py  apps.py  exceptions.py  models.py  serializers.py  urls.py
