[tool.poetry]
name = "task-manager-api"
version = "1.0.0"
description = "Task Manager API with Django REST Framework"
authors = ["Yuya Iwatsuki <spidywebcoder@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.14"
django-ninja = "^1.0"
psycopg2-binary = "^2.9.9"
hashids = "^1.3.1"
drf-nested-routers = "^0.93.4"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12"
isort = "^5.13"
flake8 = "^7.0"
pytest = "^7.4"
pytest-django = "^4.7"
pytest-asyncio = "^0.23"
factory-boy = "^3.3"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "api.config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = "-v -s --tb=short"
testpaths = ["tests"]
